News UAT/force-app/main/default/objects/User__x/User__x.object-meta.xml
<CustomObject>
    <externalDataSource>ARMuat</externalDataSource>
    <externalName>User</externalName>
    <label>NRM User</label>
    <pluralLabel>NRM Users</pluralLabel>
</CustomObject>