News UAT/force-app/main/default/objects/User__x/fields/AboutMe__c.field-meta.xml
<CustomField>
    <fullName>AboutMe__c</fullName>
    <externalDeveloperName>AboutMe</externalDeveloperName>
    <label>About Me</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>