News UAT/force-app/main/default/objects/User__x/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <externalDeveloperName>Address</externalDeveloperName>
    <label>Address</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>TextArea</type>
</CustomField>