News UAT/force-app/main/default/objects/User__x/fields/Alias__c.field-meta.xml
<CustomField>
    <fullName>Alias__c</fullName>
    <externalDeveloperName>Alias</externalDeveloperName>
    <label>Alias</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
</CustomField>