News UAT/force-app/main/default/objects/User__x/fields/BadgeText__c.field-meta.xml
<CustomField>
    <fullName>BadgeText__c</fullName>
    <externalDeveloperName>BadgeText</externalDeveloperName>
    <label>User Photo badge text overlay</label>
    <length>80</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>