News UAT/force-app/main/default/objects/User__x/fields/BannerPhotoUrl__c.field-meta.xml
<CustomField>
    <fullName>BannerPhotoUrl__c</fullName>
    <externalDeveloperName>BannerPhotoUrl</externalDeveloperName>
    <label>Url for banner photo</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Url</type>
</CustomField>