News UAT/force-app/main/default/objects/User__x/fields/Bayside_Classified_Rep_c__c.field-meta.xml
<CustomField>
    <fullName>Bayside_Classified_Rep_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Bayside_Classified_Rep__c</externalDeveloperName>
    <label>Bayside Classified Rep</label>
    <type>Checkbox</type>
</CustomField>