News UAT/force-app/main/default/objects/User__x/fields/CallCenterId__c.field-meta.xml
<CustomField>
    <fullName>CallCenterId__c</fullName>
    <externalDeveloperName>CallCenterId</externalDeveloperName>
    <label>Call Center ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>