News UAT/force-app/main/default/objects/User__x/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <externalDeveloperName>City</externalDeveloperName>
    <label>City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>