News UAT/force-app/main/default/objects/User__x/fields/Comments_c__c.field-meta.xml
<CustomField>
    <fullName>Comments_c__c</fullName>
    <externalDeveloperName>Comments__c</externalDeveloperName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>