News UAT/force-app/main/default/objects/User__x/fields/CommunityNickname__c.field-meta.xml
<CustomField>
    <fullName>CommunityNickname__c</fullName>
    <externalDeveloperName>CommunityNickname</externalDeveloperName>
    <label>Nickname</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>