News UAT/force-app/main/default/objects/User__x/fields/CompanyName__c.field-meta.xml
<CustomField>
    <fullName>CompanyName__c</fullName>
    <externalDeveloperName>CompanyName</externalDeveloperName>
    <label>Company Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>