News UAT/force-app/main/default/objects/User__x/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <externalDeveloperName>Country</externalDeveloperName>
    <label>Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>