News UAT/force-app/main/default/objects/User__x/fields/Cyber_User_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Cyber_User_Name_c__c</fullName>
    <externalDeveloperName>Cyber_User_Name__c</externalDeveloperName>
    <label>Cyber User Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>