News UAT/force-app/main/default/objects/User__x/fields/Date_Softphone_Installed_c__c.field-meta.xml
<CustomField>
    <fullName>Date_Softphone_Installed_c__c</fullName>
    <externalDeveloperName>Date_Softphone_Installed__c</externalDeveloperName>
    <label>Date Softphone Installed</label>
    <type>Date</type>
</CustomField>