News UAT/force-app/main/default/objects/User__x/fields/DB_Region_c__c.field-meta.xml
<CustomField>
    <fullName>DB_Region_c__c</fullName>
    <externalDeveloperName>DB_Region__c</externalDeveloperName>
    <label>DB Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>LA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>