News UAT/force-app/main/default/objects/User__x/fields/DB_Region_c_c__c.field-meta.xml
<CustomField>
    <fullName>DB_Region_c_c__c</fullName>
    <externalDeveloperName>DB_Region_c__c</externalDeveloperName>
    <label>1DB Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Southern</fullName>
            </value>
            <value>
                <fullName>Northern</fullName>
            </value>
            <value>
                <fullName>National</fullName>
            </value>
            <value>
                <fullName>Milton</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>