News UAT/force-app/main/default/objects/User__x/fields/DefaultCurrencyIsoCode__c.field-meta.xml
<CustomField>
    <fullName>DefaultCurrencyIsoCode__c</fullName>
    <externalDeveloperName>DefaultCurrencyIsoCode</externalDeveloperName>
    <label>Default Currency ISO Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AUD</fullName>
            </value>
            <value>
                <fullName>NZD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>