News UAT/force-app/main/default/objects/User__x/fields/DefaultGroupNotificationFrequency__c.field-meta.xml
<CustomField>
    <fullName>DefaultGroupNotificationFrequency__c</fullName>
    <externalDeveloperName>DefaultGroupNotificationFrequency</externalDeveloperName>
    <label>Default Notification Frequency when Join</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>P</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>W</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>