News UAT/force-app/main/default/objects/User__x/fields/DelegatedApproverId__c.field-meta.xml
<CustomField>
    <fullName>DelegatedApproverId__c</fullName>
    <externalDeveloperName>DelegatedApproverId</externalDeveloperName>
    <label>Delegated Approver ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>