News UAT/force-app/main/default/objects/User__x/fields/Department_picklist_c__c.field-meta.xml
<CustomField>
    <fullName>Department_picklist_c__c</fullName>
    <externalDeveloperName>Department_picklist__c</externalDeveloperName>
    <label>Department picklist</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agency One</fullName>
            </value>
            <value>
                <fullName>Agency Two</fullName>
            </value>
            <value>
                <fullName>Agency Three</fullName>
            </value>
            <value>
                <fullName>Agency Wellington</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>Classifieds</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Employment</fullName>
            </value>
            <value>
                <fullName>Inserts</fullName>
            </value>
            <value>
                <fullName>Client Partnerships</fullName>
            </value>
            <value>
                <fullName>Business Development</fullName>
            </value>
            <value>
                <fullName>Major Retail</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Motoring</fullName>
            </value>
            <value>
                <fullName>New Business</fullName>
            </value>
            <value>
                <fullName>Partnerships</fullName>
            </value>
            <value>
                <fullName>Products</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Regional</fullName>
            </value>
            <value>
                <fullName>Sections</fullName>
            </value>
            <value>
                <fullName>Digital Auckland</fullName>
            </value>
            <value>
                <fullName>Strategic</fullName>
            </value>
            <value>
                <fullName>Wellington</fullName>
            </value>
            <value>
                <fullName>Digital Wellington</fullName>
            </value>
            <value>
                <fullName>Digital Bay of Plenty</fullName>
            </value>
            <value>
                <fullName>Digital Christchurch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>