News UAT/force-app/main/default/objects/User__x/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <externalDeveloperName>Division</externalDeveloperName>
    <label>Division</label>
    <length>80</length>
    <type>Text</type>
</CustomField>