News UAT/force-app/main/default/objects/User__x/fields/EmailEncodingKey__c.field-meta.xml
<CustomField>
    <fullName>EmailEncodingKey__c</fullName>
    <externalDeveloperName>EmailEncodingKey</externalDeveloperName>
    <label>Email Encoding</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UTF-8</fullName>
            </value>
            <value>
                <fullName>ISO-8859-1</fullName>
            </value>
            <value>
                <fullName>Shift_JIS</fullName>
            </value>
            <value>
                <fullName>ISO-2022-JP</fullName>
            </value>
            <value>
                <fullName>EUC-JP</fullName>
            </value>
            <value>
                <fullName>ks_c_5601-1987</fullName>
            </value>
            <value>
                <fullName>Big5</fullName>
            </value>
            <value>
                <fullName>GB2312</fullName>
            </value>
            <value>
                <fullName>Big5-HKSCS</fullName>
            </value>
            <value>
                <fullName>x-SJIS_0213</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>