News UAT/force-app/main/default/objects/User__x/fields/EmailPreferencesAutoBcc__c.field-meta.xml
<CustomField>
    <fullName>EmailPreferencesAutoBcc__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>EmailPreferencesAutoBcc</externalDeveloperName>
    <label>AutoBcc</label>
    <type>Checkbox</type>
</CustomField>