News UAT/force-app/main/default/objects/User__x/fields/EmailPreferencesAutoBccStayInTouch__c.field-meta.xml
<CustomField>
    <fullName>EmailPreferencesAutoBccStayInTouch__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>EmailPreferencesAutoBccStayInTouch</externalDeveloperName>
    <label>AutoBccStayInTouch</label>
    <type>Checkbox</type>
</CustomField>