News UAT/force-app/main/default/objects/User__x/fields/EmailPreferencesStayInTouchReminder__c.field-meta.xml
<CustomField>
    <fullName>EmailPreferencesStayInTouchReminder__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>EmailPreferencesStayInTouchReminder</externalDeveloperName>
    <label>StayInTouchReminder</label>
    <type>Checkbox</type>
</CustomField>