News UAT/force-app/main/default/objects/User__x/fields/EmployeeNumber__c.field-meta.xml
<CustomField>
    <fullName>EmployeeNumber__c</fullName>
    <externalDeveloperName>EmployeeNumber</externalDeveloperName>
    <label>Employee Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>