News UAT/force-app/main/default/objects/User__x/fields/Extension__c.field-meta.xml
<CustomField>
    <fullName>Extension__c</fullName>
    <externalDeveloperName>Extension</externalDeveloperName>
    <label>Extension</label>
    <type>Phone</type>
</CustomField>