News UAT/force-app/main/default/objects/User__x/fields/Fax__c.field-meta.xml
<CustomField>
    <fullName>Fax__c</fullName>
    <externalDeveloperName>Fax</externalDeveloperName>
    <label>Fax</label>
    <type>Phone</type>
</CustomField>