News UAT/force-app/main/default/objects/User__x/fields/FederationIdentifier__c.field-meta.xml
<CustomField>
    <fullName>FederationIdentifier__c</fullName>
    <externalDeveloperName>FederationIdentifier</externalDeveloperName>
    <label>SAML Federation ID</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>