News UAT/force-app/main/default/objects/User__x/fields/ForecastEnabled__c.field-meta.xml
<CustomField>
    <fullName>ForecastEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>ForecastEnabled</externalDeveloperName>
    <label>Allow Forecasting</label>
    <type>Checkbox</type>
</CustomField>