News UAT/force-app/main/default/objects/User__x/fields/FullPhotoUrl__c.field-meta.xml
<CustomField>
    <fullName>FullPhotoUrl__c</fullName>
    <externalDeveloperName>FullPhotoUrl</externalDeveloperName>
    <label>Url for full-sized Photo</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Url</type>
</CustomField>