News UAT/force-app/main/default/objects/User__x/fields/Go_Live_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Go_Live_Date_c__c</fullName>
    <externalDeveloperName>Go_Live_Date__c</externalDeveloperName>
    <label>Go Live Date</label>
    <type>Date</type>
</CustomField>