News UAT/force-app/main/default/objects/User__x/fields/graphUser_c__c.field-meta.xml
<CustomField>
    <fullName>graphUser_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>graphUser__c</externalDeveloperName>
    <label>graphUser</label>
    <type>Checkbox</type>
</CustomField>