News UAT/force-app/main/default/objects/User__x/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>IsActive</externalDeveloperName>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>