News UAT/force-app/main/default/objects/User__x/fields/IsProfilePhotoActive__c.field-meta.xml
<CustomField>
    <fullName>IsProfilePhotoActive__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>IsProfilePhotoActive</externalDeveloperName>
    <label>Has Profile Photo</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>