News UAT/force-app/main/default/objects/User__x/fields/LastLoginDate__c.field-meta.xml
<CustomField>
    <fullName>LastLoginDate__c</fullName>
    <externalDeveloperName>LastLoginDate</externalDeveloperName>
    <label>Last Login</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>DateTime</type>
</CustomField>