News UAT/force-app/main/default/objects/User__x/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <externalDeveloperName>LastName</externalDeveloperName>
    <label>Last Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>