News UAT/force-app/main/default/objects/User__x/fields/LastPasswordChangeDate__c.field-meta.xml
<CustomField>
    <fullName>LastPasswordChangeDate__c</fullName>
    <externalDeveloperName>LastPasswordChangeDate</externalDeveloperName>
    <label>Last Password Change or Reset</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>DateTime</type>
</CustomField>