News UAT/force-app/main/default/objects/User__x/fields/LocaleSidKey__c.field-meta.xml
<CustomField>
    <fullName>LocaleSidKey__c</fullName>
    <externalDeveloperName>LocaleSidKey</externalDeveloperName>
    <label>Locale</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>sq</fullName>
            </value>
            <value>
                <fullName>sq_AL</fullName>
            </value>
            <value>
                <fullName>ar</fullName>
            </value>
            <value>
                <fullName>ar_DZ</fullName>
            </value>
            <value>
                <fullName>ar_BH</fullName>
            </value>
            <value>
                <fullName>ar_EG</fullName>
            </value>
            <value>
                <fullName>ar_IQ</fullName>
            </value>
            <value>
                <fullName>ar_JO</fullName>
            </value>
            <value>
                <fullName>ar_KW</fullName>
            </value>
            <value>
                <fullName>ar_LB</fullName>
            </value>
            <value>
                <fullName>ar_LY</fullName>
            </value>
            <value>
                <fullName>ar_MA</fullName>
            </value>
            <value>
                <fullName>ar_OM</fullName>
            </value>
            <value>
                <fullName>ar_QA</fullName>
            </value>
            <value>
                <fullName>ar_SA</fullName>
            </value>
            <value>
                <fullName>ar_SD</fullName>
            </value>
            <value>
                <fullName>ar_SY</fullName>
            </value>
            <value>
                <fullName>ar_TN</fullName>
            </value>
            <value>
                <fullName>ar_AE</fullName>
            </value>
            <value>
                <fullName>ar_YE</fullName>
            </value>
            <value>
                <fullName>hy</fullName>
            </value>
            <value>
                <fullName>hy_AM</fullName>
            </value>
            <value>
                <fullName>az_AZ</fullName>
            </value>
            <value>
                <fullName>eu</fullName>
            </value>
            <value>
                <fullName>eu_ES</fullName>
            </value>
            <value>
                <fullName>be_BY</fullName>
            </value>
            <value>
                <fullName>bn</fullName>
            </value>
            <value>
                <fullName>bn_BD</fullName>
            </value>
            <value>
                <fullName>bs</fullName>
            </value>
            <value>
                <fullName>bs_BA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>