News UAT/force-app/main/default/objects/User__x/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName>
    <externalDeveloperName>Longitude</externalDeveloperName>
    <label>Longitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>