News UAT/force-app/main/default/objects/User__x/fields/MediumBannerPhotoUrl__c.field-meta.xml
<CustomField>
    <fullName>MediumBannerPhotoUrl__c</fullName>
    <externalDeveloperName>MediumBannerPhotoUrl</externalDeveloperName>
    <label>Url for Android banner photo</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Url</type>
</CustomField>