News UAT/force-app/main/default/objects/User__x/fields/MediumPhotoUrl__c.field-meta.xml
<CustomField>
    <fullName>MediumPhotoUrl__c</fullName>
    <externalDeveloperName>MediumPhotoUrl</externalDeveloperName>
    <label>Url for medium profile photo</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Url</type>
</CustomField>