News UAT/force-app/main/default/objects/User__x/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <externalDeveloperName>Name</externalDeveloperName>
    <label>Full Name</label>
    <length>121</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>