News UAT/force-app/main/default/objects/User__x/fields/Notification_of_New_User_c__c.field-meta.xml
<CustomField>
    <fullName>Notification_of_New_User_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Notification_of_New_User__c</externalDeveloperName>
    <label>Notification of New User</label>
    <type>Checkbox</type>
</CustomField>