News UAT/force-app/main/default/objects/User__x/fields/NZMAG_Sfdc_ID_c__c.field-meta.xml
<CustomField>
    <fullName>NZMAG_Sfdc_ID_c__c</fullName>
    <externalDeveloperName>NZMAG_Sfdc_ID__c</externalDeveloperName>
    <label>NZMAG Sfdc ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>