News UAT/force-app/main/default/objects/User__x/fields/OfflinePdaTrialExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>OfflinePdaTrialExpirationDate__c</fullName>
    <externalDeveloperName>OfflinePdaTrialExpirationDate</externalDeveloperName>
    <label>Sales Anywhere Trial Expiration Date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>DateTime</type>
</CustomField>