News UAT/force-app/main/default/objects/User__x/fields/OfflineTrialExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>OfflineTrialExpirationDate__c</fullName>
    <externalDeveloperName>OfflineTrialExpirationDate</externalDeveloperName>
    <label>Offline Edition Trial Expiration Date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>DateTime</type>
</CustomField>