News UAT/force-app/main/default/objects/User__x/fields/Owner_ID_c__c.field-meta.xml
<CustomField>
    <fullName>Owner_ID_c__c</fullName>
    <externalDeveloperName>Owner_ID__c</externalDeveloperName>
    <label>Owner ID</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>