News UAT/force-app/main/default/objects/User__x/fields/Payroll_ID_c__c.field-meta.xml
<CustomField>
    <fullName>Payroll_ID_c__c</fullName>
    <externalDeveloperName>Payroll_ID__c</externalDeveloperName>
    <label>Payroll ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>