News UAT/force-app/main/default/objects/User__x/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <externalDeveloperName>PostalCode</externalDeveloperName>
    <label>Zip/Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>