News UAT/force-app/main/default/objects/User__x/fields/ProfileId__c.field-meta.xml
<CustomField>
    <fullName>ProfileId__c</fullName>
    <externalDeveloperName>ProfileId</externalDeveloperName>
    <label>Profile ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>