News UAT/force-app/main/default/objects/User__x/fields/ReceivesAdminInfoEmails__c.field-meta.xml
<CustomField>
    <fullName>ReceivesAdminInfoEmails__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>ReceivesAdminInfoEmails</externalDeveloperName>
    <label>Admin Info Emails</label>
    <type>Checkbox</type>
</CustomField>