News UAT/force-app/main/default/objects/User__x/fields/ReceivesInfoEmails__c.field-meta.xml
<CustomField>
    <fullName>ReceivesInfoEmails__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>ReceivesInfoEmails</externalDeveloperName>
    <label>Info Emails</label>
    <type>Checkbox</type>
</CustomField>