News UAT/force-app/main/default/objects/User__x/fields/Replaced_By_c__c.field-meta.xml
<CustomField>
    <fullName>Replaced_By_c__c</fullName>
    <externalDeveloperName>Replaced_By__c</externalDeveloperName>
    <label>Replaced By</label>
    <type>TextArea</type>
</CustomField>