News UAT/force-app/main/default/objects/User__x/fields/Replacing_c__c.field-meta.xml
<CustomField>
    <fullName>Replacing_c__c</fullName>
    <externalDeveloperName>Replacing__c</externalDeveloperName>
    <label>Replacing</label>
    <type>TextArea</type>
</CustomField>