News UAT/force-app/main/default/objects/User__x/fields/Salesforce_for_outlook_installed_c__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_for_outlook_installed_c__c</fullName>
    <externalDeveloperName>Salesforce_for_outlook_installed__c</externalDeveloperName>
    <label>Salesforce for Outlook installed</label>
    <type>Date</type>
</CustomField>