News UAT/force-app/main/default/objects/User__x/fields/SC_User_Id_c__c.field-meta.xml
<CustomField>
    <fullName>SC_User_Id_c__c</fullName>
    <externalDeveloperName>SC_User_Id__c</externalDeveloperName>
    <label>SC User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>