News UAT/force-app/main/default/objects/User__x/fields/SenderEmail__c.field-meta.xml
<CustomField>
    <fullName>SenderEmail__c</fullName>
    <externalDeveloperName>SenderEmail</externalDeveloperName>
    <label>Email Sender Address</label>
    <type>Email</type>
</CustomField>