News UAT/force-app/main/default/objects/User__x/fields/SenderName__c.field-meta.xml
<CustomField>
    <fullName>SenderName__c</fullName>
    <externalDeveloperName>SenderName</externalDeveloperName>
    <label>Email Sender Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>