News UAT/force-app/main/default/objects/User__x/fields/Show_Dashboard_c__c.field-meta.xml
<CustomField>
    <fullName>Show_Dashboard_c__c</fullName>
    <externalDeveloperName>Show_Dashboard__c</externalDeveloperName>
    <label>Show Dashboard</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>