News UAT/force-app/main/default/objects/User__x/fields/Signature__c.field-meta.xml
<CustomField>
    <fullName>Signature__c</fullName>
    <externalDeveloperName>Signature</externalDeveloperName>
    <label>Email Signature</label>
    <length>1333</length>
    <type>LongTextArea</type>
</CustomField>